- Glacier.getIceSpeed(x,z) calls getIceThickness which does interpolation

MIGRATE TO PHETCOMMON:
- DoubleSpinner
- SliderOnlyLayoutStrategy
- HorizontalLayoutStrategy

CLEANUP:
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- remove unused images (eg, penguin)


DONE:
7/19/08 - pass dialog owner Frame to control panels
7/19/08 - use ResetAllButton in misc control panel
7/19/08 - move more constants to GlaciersConstants
7/19/08 - start distribution functionality between Intro and Advanced panels
7/19/08 - delete defaults classes, move constants to GlaciersConstants
7/19/08 - use a common model for all modules
7/19/08 - merge controller code into control panels to simplify and eliminate duplicate code, delete controller classes
7/19/08 - delete Experiments module classes, they were empty and in the way
7/19/08 - hide Experiments module, Save/Load, time-based graphs, English/metric radio buttons, for 7/25 deadline (search for "XXX hide")
7/19/08 - rename PlayArea to GlaciersPlayArea
7/17/08 - rename module.basic package to module.intro
7/17/08 - fix: very short advancing glacier starts off advancing very slowly, then speeds up (fixed by previous 2 changes)
7/17/08 - change timescale so that there is no difference between retreating and advancing (use receding model for both)
7/17/08 - change timescale max to 200 
7/17/08 - fix incorrect assert in setSteadyState
******* 0.00.31 (23129)
7/12/08 - replace penguin with bear
7/9/08 - rename "penguin" to "pan control" throughout, in anticipation of changing the penguin to something else
7/9/08 - change "Sea-level temperature" to "Sea-level air temperature"
7/9/08 - change x-axis and title to "air temperature" on "Temperature vs Elevation" chart
6/18/08 - make BoreholeDrillIconNode's drag offset independent of mvt scale