@@ -10,6 +10,7 @@ import java.awt.GridBagConstraints;
 import javax.swing.*;
 import javax.swing.text.JTextComponent;
 
+import edu.colorado.phet.common.phetcommon.application.Module;
 import edu.colorado.phet.common.phetcommon.view.ResetAllButton;
 import edu.colorado.phet.common.phetcommon.view.util.EasyGridBagLayout;
 import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
@@ -45,14 +46,14 @@ public class AdvancedControlPanel extends JPanel {
     // Constructors
     //----------------------------------------------------------------------------
     
-    public AdvancedControlPanel( GlaciersModel model, GlaciersPlayArea playArea, Frame dialogOwner ) {
+    public AdvancedControlPanel( GlaciersModel model, GlaciersPlayArea playArea, Frame dialogOwner, Module module ) {
         super();
         
         _viewControlPanel = new ViewControlPanel( playArea, dialogOwner );
         _climateControlPanel = new ClimateControlPanel( model.getClimate() );
         _graphsControlPanel = new GraphsControlPanel( model, dialogOwner );
         _clockControlPanel = new GlaciersClockControlPanel( model.getClock() );
-        _miscControlPanel = new MiscControlPanel( model.getGlacier(), dialogOwner );
+        _miscControlPanel = new MiscControlPanel( model.getGlacier(), dialogOwner, module );
         
         int row;
         int column;
@@ -107,11 +108,7 @@ public class AdvancedControlPanel extends JPanel {
         return _miscControlPanel;
     }
     
-    public ResetAllButton getResetAllButton() {
-        return _miscControlPanel.getResetAllButton();
-    }
-    
-    public JButton getHelpButton() {
-        return _miscControlPanel.getHelpButton();
+    public void setHelpEnabled( boolean enabled ) {
+        _miscControlPanel.setHelpEnabled( enabled );
     }
 }
