@@ -51,18 +51,8 @@ public class IntroModule extends GlaciersModule {
         setSimulationPanel( _playArea );
 
         // Put our control panel where the clock control panel normally goes
-        _controlPanel = new IntroControlPanel( _model, _playArea, dialogOwner );
+        _controlPanel = new IntroControlPanel( _model, _playArea, dialogOwner, this );
         setClockControlPanel( _controlPanel );
-        _controlPanel.getResetAllButton().addResettable( this );
-//        _controlPanel.getMiscControlPanel().addMiscControlPanelListener( new MiscControlPanelAdapter() {
-//            public void resetAllButtonPressed() {
-//                resetAll();
-//            }
-//            public void setHelpEnabled( boolean enabled ) {
-//                System.out.println( "BasicModule.setHelpEnabled " + enabled );//XXX
-//                IntroModule.this.setHelpEnabled( enabled );
-//            }
-//        });
         
         // Help
         if ( hasHelp() ) {
@@ -97,7 +87,7 @@ public class IntroModule extends GlaciersModule {
      */
     public void setHelpEnabled( boolean enabled ) {
         super.setHelpEnabled( enabled );
-        _controlPanel.getMiscControlPanel().setHelpEnabled( enabled );
+        _controlPanel.setHelpEnabled( enabled );
         GlaciersApplication.instance().getPhetFrame().getHelpMenu().setHelpSelected( enabled );
     }
     
